<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/edit_text_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckinFragment">


    <LinearLayout
        android:id="@+id/checkinControls"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentStatus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCheckin"
                style="@android:style/TextAppearance.Material.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_shift_start"
                android:padding="20dp"
                android:text="@string/shift_start" />

            <Button
                android:id="@+id/buttonCheckout"
                style="@android:style/TextAppearance.Material.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_shift_end"
                android:padding="20dp"
                android:text="@string/shift_end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBreakIn"
                style="@android:style/TextAppearance.Material.Button"
                android:drawableStart="@drawable/ic_break_out"
                android:text="@string/srart_break"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20dp" />

            <Button
                android:id="@+id/buttonBreakOut"
                style="@android:style/TextAppearance.Material.Button"
                android:drawableStart="@drawable/ic_break_end"
                android:text="@string/end_break"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20dp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/currentStatus"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/checkinStauts"
            android:drawableLeft="@drawable/ic_shift_start"
            android:drawablePadding="@dimen/edit_text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:text="@string/loading"
            android:textSize="@dimen/labels_text_size" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/checkinAddress"
            android:drawableLeft="@drawable/mapbox_marker_icon_default"
            android:drawablePadding="@dimen/edit_text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:text="@string/loading"
            android:textSize="@dimen/labels_text_size" />


    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>